--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body {
   align-items: center;
   margin: 5rem 0 3rem 0;
   gap: 20px;
+  font-size: 20px;
 }
 .gameBoard {
   background-color: steelblue;
