--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
   width: 100%;
   gap: 20px;
   color: lightskyblue;
+  align-items: center;
 }
 .scoreContainer {
   display: flex;
@@ -23,9 +24,29 @@ body {
   gap: 20px;
   font-size: 20px;
 }
+.uiControls {
+  padding: 20px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+.gameBtn {
+  font-size: 1.2rem;
+  padding: 5px;
+  border: none;
+  border-radius: 12px;
+  background-color: #333;
+  color: lightskyblue;
+}
+.gameBtn:hover {
+  cursor: pointer;
+  background: lightskyblue;
+  color: #333;
+}
 .gameBoard {
   background-color: steelblue;
-  display: grid;
+  display: none;
   align-items: center;
   justify-items: center;
   grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -41,4 +62,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 5rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
